--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,3 +1,9 @@
+.main-exchange-container--title h2 {
+     margin-bottom: 15px;
+}
+.main-cards--scroll {
+     margin-top: 15px;
+}
 .product-cards--container {
      display: flex;
      flex-wrap: wrap;
